# shadowshield

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: attack_pattern.md  bug_report.md
.github/workflows/: ci.yml  pages.yml  publish.yml
docs/: BENCHMARKS.md  COMPARISON.md  RELEASING.md  configuration.md  detectors.md  index.md  plugins.md  security-model.md
docs/research/: LANDSCAPE.md
examples/: agentic_security.py  custom_detector.py  langchain_integration.py  openai_integration.py  quickstart.py
site/: README.md  index.html  llms-full.txt  llms.txt  og.html  robots.txt  sitemap.xml  vercel.json
src/shadowshield/: __init__.py  cli.py  server.py
src/shadowshield/config/: __init__.py  default.yaml
src/shadowshield/core/: __init__.py  canary.py  config.py  engine.py  session.py  shield.py  types.py
src/shadowshield/detectors/: __init__.py  alignment.py  anomaly.py  base.py  canary.py  encoding.py  exfiltration.py  jailbreak.py  llm_check.py  pii.py  prompt_injection.py  transformer.py  vector.py
src/shadowshield/detectors/data/: attack_corpus.txt
src/shadowshield/eval/: __init__.py  dataset.py  harness.py
src/shadowshield/eval/data/: builtin_benchmark.jsonl
src/shadowshield/integrations/: __init__.py  agentdojo.py
src/shadowshield/middleware/: __init__.py  base.py  decorators.py  langchain.py  openai.py
src/shadowshield/plugins/: __init__.py  base.py  manager.py
src/shadowshield/responders/: __init__.py  base.py  blocker.py  isolator.py  rate_limiter.py  sanitizer.py
src/shadowshield/utils/: __init__.py  logging.py  scoring.py  text.py
tests/: test_agentic.py  test_config.py  test_detectors.py  test_middleware.py  test_multilingual.py  test_pii_backends.py  test_production.py  test_prompt_injection.py  test_responders.py  test_server.py  test_shield.py  test_transformer.py  test_vector.py
